--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -24,5 +24,5 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: subbadocker496/deployment:1.0.0
+        image: subbadocker496/mysql:1.0.0
         
