--- a/frontend/manifest.yaml
+++ b/frontend/manifest.yaml
@@ -24,7 +24,7 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: subbadocker496/frontend:1.0.0
+        image: hemanthkumar75/frontend:v1
         ports:
         - containerPort: 8080
 ---
